test/asm/nested-bad-interpolation.err
error: Interpolated symbol `a` is a reserved keyword; add a '#' prefix to use it as a raw symbol
    at nested-bad-interpolation.asm(1)
error: Interpolated symbol `` does not exist
    at nested-bad-interpolation.asm(1)
error: syntax error, unexpected end of line
    at nested-bad-interpolation.asm(1)
error: Interpolated symbol `b` is a reserved keyword; add a '#' prefix to use it as a raw symbol
    at nested-bad-interpolation.asm(2)
error: Character literals must be a single charmap unit
    at nested-bad-interpolation.asm(2)
error: Interpolated symbol `c` is a reserved keyword; add a '#' prefix to use it as a raw symbol
    at nested-bad-interpolation.asm(3)
error: Interpolated symbol `` does not exist
    at nested-bad-interpolation.asm(3)
error: Character literals must be a single charmap unit
    at nested-bad-interpolation.asm(3)
Assembly aborted with 8 errors
