test/asm/nested-bad-interpolation.asm
def p = {{a}}
def q = '{b}'
def r = '{{c}}'
